--- a/polls/templates/polls/contact.html
+++ b/polls/templates/polls/contact.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <meta name="description" content="Daily Tintin" />
 <meta name="keywords" content="Tintin, generator, quote, Herge" />
 <meta name="author" content="Petteri Hamalainen" />
