--- a/polls/templates/polls/note.html
+++ b/polls/templates/polls/note.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <meta name="description" content="Daily Tintin" />
 <meta name="keywords" content="Tintin, generator, quote, Herge" />
 <meta name="author" content="Petteri Hamalainen" />
@@ -143,43 +143,6 @@ h2 {
 	margin: 0 0 6px 0;
 }
 
-#bubbletop {
-	background: #eee url(/static/bubbletop.png) center center no-repeat;
-	display: table;
-	width: 490px;
-	height: 32px;
-	margin: 0 auto 0 auto;
-	padding: 0;
-}
-
-#bubblebottom {
-	display: table;
-	width: 490px;
-	height: 293px;
-	color: #555;
-	margin: auto;
-	padding: 0;
-}
-
-#bubble {
-	background: #eee url(/static/bubble.png) center center repeat;
-	display: table;
-	width: 420px;
-	color: #000;
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 22px;
-	font-weight: bold;
-	margin: 0 auto 0 auto;
-	padding: 0 30px 0 40px;
-	text-align: left;
-}
-
-#bubblecontainer{
-  display: table;
-  box-shadow: 0px 0px 2px 0px #000;
-  margin: 0 auto;
-}
-
 #error {background-color:#ffffff;border:1px solid #f00;margin:20px auto;padding: 20px;width:600px;}
 #thankyou {background-color:#ffffff;border:1px solid #090;margin:20px auto;padding: 20px;width:600px;}
 
@@ -201,26 +164,31 @@ h2 {
   <br>
 
   <form action="note" method="post">
-  {% csrf_token %}
+<!--  {% csrf_token %} -->
+<!-- OWASP A5 - Broken Access Control -->
+<!-- Since csrf_token is commented out session control is not in use -->
+<!-- Data can be fed in with Postman for example -->
     <div >
 	  Name: &nbsp; &nbsp;
 	  <textarea id="name" rows="1" cols="60" name="name" maxlength="50">John Doe</textarea>
 	  <br>
 	  Message:
-	  <textarea id="message" rows="3" cols="60" name="message" maxlength="200"><script>alert("Hello! I am an xss attack!");</script></textarea>
+	  <textarea id="message" rows="3" cols="60" name="message" maxlength="200"><script>alert("Hello. I am an xss attack!")</script></textarea>
 	</div>
-	  <div>  
-		  <input type="submit" value="Submit">
-	  </div>
+	<div>  
+	  <input type="submit" value="Submit">
+	</div>
   </form>
 
   <br><br>
   <h2>Guestbook</h2>
 
+<!-- OWASP A7 - Cross Site Scripting -->
+<!-- autoescape off disables special character escape allowing javascript to be ran -->
 {% autoescape off %}
    <div id="thankyou" style="text-align:left;color:black">
-   {% for message in all_messages %} #{{message.id}} <b> {{message.name}} </b> says: {{message.note}}
- <br>{% endfor %}
+     {% for message in all_messages %} #{{message.id}} <b> {{message.name}} </b> says: {{message.note}}
+     <br>{% endfor %}
    </div>
 {% endautoescape %}
 
